feat: Add Use case Delete user
